<resources>

    <string name="app_name">TodoApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Todo App</string>
    <string name="deadline">Deadline</string>
    <string name="status">Status</string>
    <string name="todo_textview">Todo content</string>
    <string name="todo_hint">Enter what to do here</string>
    <string name="status_done">Done</string>
    <string name="status_pending">Pending</string>
    <string name="ok_button">Done</string>
    <string name="close_button">Close</string>
    <string name="addnew_button">Add New</string>
    <string name="getTime_button">Get Time</string>
    <string name="delete_button">Delete</string>

</resources>